2009-08-02  kitone  <kitone@gna.org>

	* src/we/waveformrenderer.cc:
	* src/we/waveformrenderer.h:
	Add keyframes support to the waveform renderer.

2009-08-02  kitone  <kitone@gna.org>

	* src/player.h:
	* src/vp/gstreamerplayer.cc:
	* src/vp/gstreamerplayer.h:
	Add keyframes support to the player.

2009-08-02  kitone  <kitone@gna.org>

	* src/Makefile.am:
	Add new files keyframes.h & keyframes.cc.

	* src/keyframes.cc:
	* src/keyframes.h:
	Introduce new class KeyFrames.

2009-07-13  kitone  <kitone@gna.org>

	* plugins/actions/findandreplace/dialog-find-and-replace.glade:
	* plugins/actions/findandreplace/findandreplace.cc:
	Complete rewrite of the findandreplace plugin. Many improvements.

2009-07-13  kitone  <kitone@gna.org>

	* src/gui/application.cc:
	Update the current page from the signal current-document-changed.

2009-07-13  kitone  <kitone@gna.org>

	* src/subtitles.cc:
	* src/subtitles.h:
	Add select function from subtitle list.

2009-07-06  kitone  <kitone@gna.org>

	* configure.in:
	Change dependence of enchant >= 1.4.0.

2009-07-02  kitone  <kitone@gna.org>

	* configure.in:
	Change dependence of gtkmm >= 2.14.

2009-06-24  kitone  <kitone@gna.org>

	* configure.in:
	Switching back to development version.

2009-06-23  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.33.0 release.

2009-06-22  kitone  <kitone@gna.org>

	* plugins/actions/splitsubtitle/splitsubtitle.cc:
	Improve split subtitle. Fix bug #13271 : Splitting italic subtitles.

2009-06-20  kitone  <kitone@gna.org>

	* plugins/actions/wavefrommanagement/waveformmanagement.cc:
	New action 'Generate Dummy Waveform'. Fix bug #13696 : Waveform window for silent films.

2009-06-14  kitone  <kitone@gna.org>

	* plugins/actions/splitsubtitle/splitsubtitle.cc:
	Split a subtitle for each lines and sets the duration according to number of
	characters in each part. Fix bug #13270.

2009-06-14  kitone  <kitone@gna.org>

	* configure.in:
	* plugins/subtitleformats/Makefile.am: